# robocode

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  README.zh-CN.md
docs/: architecture.md  architecture.zh-CN.md  documentation-localization.md  documentation-localization.zh-CN.md  modules.md  modules.zh-CN.md  product-requirements.md  product-requirements.zh-CN.md  ref-gap-matrix.md  ref-gap-matrix.zh-CN.md  reference-analysis.md  reference-analysis.zh-CN.md  staged-roadmap.md  staged-roadmap.zh-CN.md
docs/superpowers/plans/: 2026-04-11-robocode-plan-index.md  2026-04-11-robocode-plan-index.zh-CN.md  (+6 more)
robocode-cli/: Cargo.toml  README.md  README.zh-CN.md
robocode-cli/src/: main.rs
robocode-config/: Cargo.toml  README.md  README.zh-CN.md
robocode-config/src/: lib.rs
robocode-core/: Cargo.toml  README.md  README.zh-CN.md
robocode-core/src/: lib.rs
robocode-lsp/: Cargo.toml  README.md  README.zh-CN.md
robocode-lsp/src/: config.rs  framing.rs  lib.rs  protocol.rs  runtime.rs
robocode-model/: Cargo.toml  README.md  README.zh-CN.md
robocode-model/src/: lib.rs
robocode-permissions/: Cargo.toml  README.md  README.zh-CN.md
robocode-permissions/src/: lib.rs
robocode-session/: Cargo.toml  README.md  README.zh-CN.md
robocode-session/src/: lib.rs
robocode-tools/: Cargo.toml  README.md  README.zh-CN.md
robocode-tools/src/: lib.rs
robocode-types/: Cargo.toml  README.md  README.zh-CN.md
robocode-types/src/: lib.rs
robocode-workflows/: Cargo.toml  README.md  README.zh-CN.md
robocode-workflows/src/: lib.rs  memory.rs  resume_context.rs  stores.rs  tasks.rs
(+2 files in other folders)
