[workspace]
members = [
    "robocode-cli",
    "robocode-config",
    "robocode-core",
    "robocode-lsp",
    "robocode-model",
    "robocode-permissions",
    "robocode-session",
    "robocode-tools",
    "robocode-types",
    "robocode-workflows",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["wiki"]
