[package]
name = "robocode-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
robocode-core = { path = "../robocode-core" }
robocode-model = { path = "../robocode-model" }
robocode-tools = { path = "../robocode-tools" }
robocode-types = { path = "../robocode-types" }

