[package]
name = "robocode-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
robocode-model = { path = "../robocode-model" }
robocode-permissions = { path = "../robocode-permissions" }
robocode-session = { path = "../robocode-session" }
robocode-tools = { path = "../robocode-tools" }
robocode-types = { path = "../robocode-types" }
