[package]
name = "robocode-workflows"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
robocode-session = { path = "../robocode-session" }
robocode-types = { path = "../robocode-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
